# cf-email-utils

./: Cargo.toml
src/: args.rs  error.rs  handlers.rs  main.rs  models.rs  utils.rs
src/handlers/: delete.rs  import.rs
src/models/: list.rs
