[package]
name = "cf-email-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.122"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.39.2", features = ["net", "macros", "mio", "rt-multi-thread"] }
